# enowars9-service-parceroTV

./: .gitignore  README.md
.github/workflows/: enochecker_test.yml
checker/: Dockerfile  docker-compose.yml  requirements.txt
checker/src/: checker.py  exploit_translation.py  gunicorn.conf.py  names.py  spanish_words.txt
documentation/: README.md
service/: .gitignore  Dockerfile  cleanup.py  docker-compose.yml  entrypoint.sh
service-sourcecode-forbinary/: .gdb_history  .gitignore  db.c  db.h  exploit.py  main.c  poc.c  server.c  session.c  session.h  shell.c  shellcode.c  signals.c  signals.h  test.c  vuln
service/backend/: Cargo.toml  diesel.toml  parcerotv.db
service/backend/db/: parcerotv.db  parcerotv.sql  start_db.sh
service/backend/private/: Hey6852113727849512881
service/backend/src/: db.rs  forms.rs  lib.rs  main.rs  models.rs  schema.rs  shorts_lib.rs  spanish_dictionary.rs  spanish_words.txt
service/data/: parcerotv.db
service/frontend/: aboutus.html  developers.html  footer.html  header.html  help.html  home.html  jobs.html  login.html  no_permission.html  playlist.html  playlist_page.html  privacy.html  profile.html  register.html  shorts.html  terms.html  unauthorized.html  upload.html  uploads_error.html  users.html  videos.html
service/frontend/css/: home.css  loginregister.css  navigation.css  playlist.css  shorts.css  videos.css
service/frontend/js/: home.js  playlist.js  playlist_page.js  profile.js  shorts.js  upload.js  users.js  videos.js
