[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "^4"
actix-files = "0.6"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
rusqlite = "0.31"
serde = { version = "1", features = ["derive"] }
diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
