[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "^4"
actix-files = "0.6"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
rusqlite = "^0.31"
serde = { version = "1", features = ["derive"] }
bytes = "1.6"
tempfile = "3.20.0"
ffmpeg-next = "7.1.0"
multipart = "0.18.0"
actix-multipart = "0.7.2"
futures-util = "0.3.31"
regex = "1.11.1"
rand = "0.8"
